--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script async src="https://lib.usedesk.ru/secure.usedesk.ru/widget_165193_44452.js"></script>
   </body>
 </html>
