--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="lava" content="sGboNveRlWjz1I8uakthEiUJyHDwf9gn260rmcqFKXdLAMT5"/>
     <title>Browser ProFiles</title>
   </head>
   <body>
