Fixed desktop get lang

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="lava" content="sGboNveRlWjz1I8uakthEiUJyHDwf9gn260rmcqFKXdLAMT5"/>
+    <meta name="enot" content="64816758892339-EqcJ69OhUhIvf40bXCqXL1eFIUcbw0" />
     <title>Browser ProFiles</title>
   </head>
   <body>
