--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="lava" content="sGboNveRlWjz1I8uakthEiUJyHDwf9gn260rmcqFKXdLAMT5"/>
-    <meta name="enot" content="64816758892339-EqcJ69OhUhIvf40bXCqXL1eFIUcbw0" />
-    <title>Browser ProFiles</title>
+    <title>Браузерные профили</title>
   </head>
   <body>
     <div id="app"></div>
